--- a/template/index.js.ejs
+++ b/template/index.js.ejs
@@ -1,6 +1,6 @@
 <% dependencies.split(/\s/).forEach(function (module) {
   if (module) {
-    var jsModule = module.match(/([^/]+)$/)[1]
+    var jsModule = module.match(/([^/]+)$/)[1].replace(/[-]/g, '_')
     jsModule = jsModule.replace(/[-]/g, '_');
     print("var "+jsModule+" = require('"+module+"')\n")
   }
